@@ -52,6 +52,7 @@ v0.3.0, 2011-12-02 -- Worth the wait
        saving output locally
    * inline mode:
      * Supports cmdenv (Issue #136)
+     * Passthrough options can now affect steps list (Issue #301)
    * local mode:
      * Runs 2 mappers and 2 reducers in parallel by default (Issue #228)
      * Preliminary Hadoop simulation for some jobconf variables (Issue #86)
